Commit changes for Moviing UI components to folder, Fixing UI issues

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -38,3 +38,11 @@ body {
     margin: 0 5px;
   }
 }
+
+.footer {
+  flex-shrink: 0;
+  text-align: center;
+  background-color: tomato;
+  position: sticky;
+  color: white;
+}
